complete iteration, but still has bugs