@@ -15,7 +15,7 @@ import org.apache.hadoop.io.Text;
 import org.apache.hadoop.mapreduce.Mapper;
 import org.apache.hadoop.conf.Configuration;
 
-public class CalculateAverageMapper extends Mapper<LongWritable, Text, Text, DoubleWritable> {
+public class CalculateAverageMapper extends Mapper<LongWritable, Text, Text, Text> {
 	
     private SumCountPair element ;
 
@@ -25,16 +25,16 @@ public class CalculateAverageMapper extends Mapper<LongWritable, Text, Text, Dou
         String pageTitle = patterns[0];
 
         Configuration conf = context.getConfiguration();
-        double N = Double.valueOf(conf.get("!chihmin_nodes"));
-        double zeroDegree = Double.valueOf(conf.get("!chihmin_zero"));
-        
+        Double N = Double.valueOf(conf.get("!chihmin_nodes"));
+        Double zeroDegree = Double.valueOf(conf.get("!chihmin_zero"));
 
         if (pageTitle.compareTo("!chihmin_nodes") != 0 &&
-                pageTitle.compareTo("!chihmin_zero") != 0) {
+            pageTitle.compareTo("!chihmin_zero") != 0 &&
+            pageTitle.compareTo("!!!!chihmin_error") != 0) {
             
             String numOfEdgeStr = patterns[1];
-            double pageRank = Double.valueOf(patterns[patterns.length - 1]);
-            double alpha = 0.85;
+            Double pageRank = Double.valueOf(patterns[patterns.length - 1]);
+            Double alpha = new Double(0.85);
             // System.out.println("[MAPPER " + numOfEdgeStr + "] " + pageStr);
             int numOfEdge = Integer.valueOf(numOfEdgeStr);
             for (int i = 0; i < numOfEdge; ++i){
@@ -44,18 +44,36 @@ public class CalculateAverageMapper extends Mapper<LongWritable, Text, Text, Dou
                 if (nextNode.length() == 0)
                     continue;
                 Text pageKey = new Text();
-                DoubleWritable pageValue = new DoubleWritable();
-                 
+                Text pageValue = new Text();
+                
+                if (nextNode.length() > 0) {
+                    char[] nextNodeArray = nextNode.toCharArray();
+                    if (nextNodeArray[0] >= 'a' && nextNodeArray[0] <= 'z')
+                        nextNodeArray[0] = Character.toUpperCase(nextNodeArray[0]);
+                    nextNode = new String(nextNodeArray);
+                }
+
                 pageKey.set(nextNode);
-                pageValue.set(alpha * pageRank / Double.valueOf(numOfEdge));
+                pageValue.set(String.valueOf(alpha * pageRank / Double.valueOf(numOfEdge)) + "\t1");
 
                 context.write(pageKey, pageValue);
             }
 
             Text pageKey = new Text(pageTitle);
-            DoubleWritable pageValue = new DoubleWritable(
-                (1 - alpha) * (1 / N) + zeroDegree
+            Text pageValue = new Text(
+                String.valueOf(
+                    (Double.valueOf(1.0) - alpha) * 
+                    (Double.valueOf(1.0) / N) + 
+                    zeroDegree
+                ) + "\t1"
             );
+            context.write(pageKey, pageValue);
+
+            pageKey = new Text(new String(pageTitle));
+            pageValue = new Text(
+                pageStr.substring(pageTitle.length() + 1) + "\t0"
+            );
+            
             context.write(pageKey, pageValue);
         }
     }
